.deploy/api/manual/04-ngxapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngxapi
  labels:
    app: ngxapi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: ngxapi
  template:
    metadata:
      name: ngxapi
      labels:
        app: ngxapi
    spec:
      containers:
        - name: api
          image: xmlking/ngxapi:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 4G
            requests:
              memory: 2G
          ports:
            - containerPort: 3000
              protocol: TCP
