.deploy/api/manual/05-ngxapi-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngxapi
  labels:
    app: ngxapi
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
      nodePort: 33000
  selector:
    app: ngxapi
