.deploy/api/manual/05-ngxapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngxapi
  labels:
    app: ngxapi
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: ngxapi
